<resources>
    <string name="app_name">A00962243_Final Project</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats_stopWorkout">STOP WORKOUT</string>
    <string name="stats_startWorkout">START WORKOUT</string>
    <string name="stats_durationText">00:00</string>
    <string name="stats_distanceText">0.0</string>
    <string name="stats_distanceLbl">DISTANCE (KM)</string>
    <string name="stats_durationLbl">DURATION</string>
    <string name="checkGPS_title">We need your location</string>
    <string name="checkGPS_desc">In order to track your bike activity</string>
    <string name="checkGPS_btn">Enable GPS</string>
    <string name="LocationErrorTag">LocationRecord_err</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="record_backBtn">Back</string>
    <string name="LocationDebugTag">LocationRecord</string>
    <string name="checkGPS_imgDesc">GPS icon</string>
    <string name="result_discard">Discard</string>
    <string name="result_result">Result</string>
    <string name="result_name">Name</string>
    <string name="result_duration">Duration</string>
    <string name="result_averageSpeed">Average Speed</string>
    <string name="result_distance">Distance</string>
    <string name="list_delete">Delete</string>
    <string name="list_imageDesc">bike icon</string>
    <string name="MapFrament_error_tag">MapFragment_err</string>
    <string name="ResultMapFragment_err_tag">ResultMapFragment_err</string>
    <string name="List_err_tag">List_err</string>
    <string name="List">List</string>
</resources>
